--- a/06-contact.html
+++ b/06-contact.html
@@ -13,13 +13,14 @@
 	
 	<!-- Stylesheets -->
 	
-	<link href="common-css/bootstrap.css" rel="stylesheet">
 	
-	<link href="common-css/ionicons.css" rel="stylesheet">
+	<link href="https://github.com/Aryanstha/Drean-link/blob/main/common-css/bootstrap.css" rel="stylesheet">
 	
-	<link href="06-contact/css/styles.css" rel="stylesheet">
+	<link href="https://github.com/Aryanstha/Drean-link/blob/main/common-css/ionicons.css" rel="stylesheet">
 	
-	<link href="06-contact/css/responsive.css" rel="stylesheet">
+	<link href="https://github.com/Aryanstha/Drean-link/blob/main/06-contact/css/styles.css" rel="stylesheet">
+	
+	<link href="https://github.com/Aryanstha/Drean-link/blob/main/06-contact/css/responsive.css" rel="stylesheet">
 	
 </head>
 <body>
@@ -189,13 +190,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> 2022 
 	
 	<!-- SCIPTS -->
 	
-	<script src="common-js/jquery-3.1.1.min.js"></script>
+	<script src="https://github.com/Aryanstha/Drean-link/blob/main/common-js/jquery-3.1.1.min.js"></script>
 	
-	<script src="common-js/tether.min.js"></script>
+	<script src="https://github.com/Aryanstha/Drean-link/blob/main/common-js/tether.min.js"></script>
 	
-	<script src="common-js/bootstrap.js"></script>
+	<script src="https://github.com/Aryanstha/Drean-link/blob/main/common-js/bootstrap.js"></script>
 	
-	<script src="common-js/scripts.js"></script>
+	<script src="https://github.com/Aryanstha/Drean-link/blob/main/common-js/scripts.js"></script>
 	
 	
 </body>
