--- a/06-contact.html
+++ b/06-contact.html
@@ -64,7 +64,7 @@
 			
 				<div class="col-md-12 col-lg-8">
 					<div class="contact-form">
-						<form method="post">
+						<form action="https://formspree.io/f/xeqngnao" nmethod="post">
 							<div class="row">
 							
 								<div class="col-sm-6">
